@@ -1,5 +1,9 @@
 ---
 
+Add buffering timeout to PLAY: state in slimaudio_output.c
+
+---
+
 Define PAWIN_USE_WDMKS_DEVICE_INFO when building Win PortAudio -- that will bypass DirectSound and use the driver channel count information.
 
 ---
